# itmo-SEM-back

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  runner.py
.keycloak/: realm-export.json
app/: log.py  main.py  settings.py
app/api/: api.py  deps.py  util.py
app/api/endpoints/: admin.py  keycloak.py  materials.py  order.py  order_link.py  order_param_value.py  order_status_update.py  order_type.py  order_type_param.py  tasks.py
app/core/: auth.py  error.py  keycloak.py  message.py
app/db/: base.py  base_class.py  entities.py  session.py
app/migrations/: env.py
app/migrations/versions/: 14b5aa5aaabf_add_dep_type.py  390693bb4863_order_links.py  498d366138ed_add_order_status_update_entity.py  4af9d12196f5_add_materials.py  64560df70ed7_init.py  6534e44e3ddc_rename_defect_order.py  6cc41a6505a6_add_more_order_types.py  cee46b0bf8e0_message.py  db91372fb7f3_rename_defect_order_2.py  ea76307c5121_parent_nullable.py  fdc94f2d9c8e_order_links.py
app/schemas/: KeycloakEndpoint.py  User.py  __init__.py  keycloak_user.py  materials.py  order.py  order_link.py  order_param_value.py  order_type.py  order_type_param.py  tasks.py  util.py
app/services/: __init__.py  base.py  materials.py  order.py  order_link.py  order_param_value.py  order_status_update.py  order_type.py  order_type_param.py  tasks.py
app/util/: urls.py
deploy/: local.docker-compose.yml
keycloak/: realm-export.json
keycloak/import/: realm-export.json
keycloak/themes/mpi/login/: login.ftl  template.ftl
keycloak/themes/mpi/login/resources/css/: login.css
keycloak/themes/mpi/login/resources/messages/: messages_en.properties
scripts/: data_generator.py  spawn_users.py  users.json
tests/: MPI.side  conftest.py  test_utils.py
tests/api/: test_order.py  test_security.py
tests/database-integration/: test_db_order.py  test_db_schema.py
